--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>PDF MergeX | merge any PDF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
@@ -37,7 +37,7 @@
                 <label for="formFileMultiple" class="form-label">Please Select both PDF's to be merged </label>
                 <input class="form-control" type="file" id="formFileMultiple" name="pdfs" multiple accept=".pdf">
             </div>
-            <input class="btn btn-secondary" type="submit" value="Submit">
+            <input class="btn btn-secondary" type="submit" value="submit">
         </form>
     </div>
     
